--- a/app/views/shared/_sidemenu.html.haml
+++ b/app/views/shared/_sidemenu.html.haml
@@ -26,6 +26,7 @@
           %div.hidden{'data-target': 'region-switcher.companies', 'region-id': reg[:id]}
 
             - region_companies = reg[:companies] || []
+            - filtered_companies = region_companies.select { |co| co[:name] }
             - region_companies.sort_by {|co| co[:name]}.each do |co|
 
               %div.companyExpander{'data-controller': 'company-expander', 'data-company-expander-start-state': sidemenu_open_close_state(initial_company_id,co[:id]) }
@@ -59,6 +60,22 @@
                                 - if dp[:id]==initial_drug_period_id
                                   = link_to(dp[:label], book_path(dp[:id]), class: 'selectedPeriod')
                                 - else
-                                  = link_to(dp[:label], book_path(dp[:id]))                                                  
-           
+                                  = link_to(dp[:label], book_path(dp[:id]))  
 
+            - region_companies = reg[:companies] || []
+            - filtered_companies = region_companies.select { |co| co[:name] }
+            - region_companies.sort_by {|co| co[:name]}.each do |co|    
+              %div.companyExpander{'data-controller': 'company-expander', 'data-company-expander-start-state': sidemenu_open_close_state(initial_company_id,co[:id]) }
+                %div.company
+                  %button{'data-action': 'click->company-expander#toggle'}
+                    = icon('fas', 'plus', 'data-target': 'company-expander.icon')
+                    = 'Special Situation'
+                %div.drugExpanders.hidden{'data-target': 'company-expander.drugs'}
+                  - filtered_drugs = co[:drugs].select { |co| co[:special_situation]&.include?(current_user.organization.id.to_s) }
+                  - filtered_drugs.each do |drug|
+
+                    %div.drugExpander{'data-controller': 'drug-expander', 'data-drug-expander-start-state': sidemenu_open_close_state(initial_drug_id,drug[:id]) }
+                      %div.drug
+                        %button{'data-action': 'click->drug-expander#toggle'}
+                          = icon('fas', 'plus', 'data-target': 'drug-expander.icon')
+                          = drug[:special_situation]
