--- a/app/views/book/_order_ticket.html.haml
+++ b/app/views/book/_order_ticket.html.haml
@@ -1,3 +1,6 @@
+%div.Notes.hidden{'data-target': 'notes-popper',
+                                 'data-controller': 'calculator'}
+  %h1 ABCD:
 %div.orderTicketContainer.hidden{'data-target': 'order-ticket-popper.ticket',
                                  'data-controller': 'calculator'}
   = render 'calculator'
