--- a/app/assets/stylesheets/base_edd.css
+++ b/app/assets/stylesheets/base_edd.css
@@ -225,3 +225,31 @@
 .edd-body-scrollable.edd-body-at-bottom .edd-gradient-bottom {
     opacity: 0;
 }
+
+
+.fancy-alert {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    z-index: 1000;
+    width: 300px;
+    text-align: center;
+  }
+  
+  .fancy-alert-content {
+    font-size: 16px;
+  }
+  
+  .close-button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 20px;
+    cursor: pointer;
+  }
