--- a/app/views/shared/_sidemenu.html copy.haml
+++ b/app/views/shared/_sidemenu.html copy.haml
@@ -13,11 +13,15 @@
     - initial_region_id ||= Region.default.id
 
     %div{'data-controller': 'region-switcher', 'data-region-switcher-initial-value': initial_region_id}
-
+      %p          
+        = @test
       %div.sidebarMenu-regionDropdownContainer
         %select{name: 'regions', id: 'region-select', 'data-action': 'change->region-switcher#onChange'}
           - @sidemenu[:regions].each do |reg|
             %option{value: reg[:id], selected: initial_region_id==reg[:id]}= reg[:name]
+         
+        
+
 
       %div.sidebarMenu-companyExpanders
 
@@ -26,6 +30,7 @@
           %div.hidden{'data-target': 'region-switcher.companies', 'region-id': reg[:id]}
 
             - region_companies = reg[:companies] || []
+            - filtered_companies = region_companies.select { |co| co[:name] }
             - region_companies.sort_by {|co| co[:name]}.each do |co|
 
               %div.companyExpander{'data-controller': 'company-expander', 'data-company-expander-start-state': sidemenu_open_close_state(initial_company_id,co[:id]) }
@@ -35,7 +40,8 @@
                     = co[:name]
 
                 %div.drugExpanders.hidden{'data-target': 'company-expander.drugs'}
-                  - co[:drugs].sort_by {|drug| drug[:brand_name]}.each do |drug|
+                  - filtered_drugs = co[:drugs].reject  { |co| co[:special_situation]&.include?(current_user.organization.id.to_s) }
+                  - filtered_drugs.sort_by {|drug| drug[:brand_name]}.each do |drug|
 
                     %div.drugExpander{'data-controller': 'drug-expander', 'data-drug-expander-start-state': sidemenu_open_close_state(initial_drug_id,drug[:id]) }
                       %div.drug
@@ -59,22 +65,40 @@
                                 - if dp[:id]==initial_drug_period_id
                                   = link_to(dp[:label], book_path(dp[:id]), class: 'selectedPeriod')
                                 - else
-                                  = link_to(dp[:label], book_path(dp[:id]))
-            - if current_user.try(:username).present?
-              -if current_user.username=='inv_trader'
-                %div.company
-                  %button{'data-action': 'click->company-expander#toggle', 'title': 'Under construction...'}
-                  = icon('fas', 'minus', 'data-target': 'company-expander.icon')
-                  = 'Special Situations'
-                  %div.drugExpander
-                    %div.drug
-                    %button{'data-action': 'click->drug-expander#toggle'}
-                    = icon('fas', 'minus', ' data-target': 'drug-expander.icon')
-                    = 'Glumetza 500 mg'
-                    %div.periodTypeExpander
-                    %div.periodType
-                    %button{'data-action': 'click->period-type-expander#toggle'}
-                      = icon('fas', 'minus', 'data-target': 'period-type-expander.icon')
-                      = 'Annual'
-           
+                                  = link_to(dp[:label], book_path(dp[:id]))  
 
+   
+            %div.companyExpander{'data-controller': 'company-expander', 'data-company-expander-start-state': sidemenu_open_close_state(initial_company_id,-1) }
+              %div.company
+                %button{'data-action': 'click->company-expander#toggle'}
+                  = icon('fas', 'plus', 'data-target': 'company-expander.icon')
+                  = 'Special Situation'
+              %div.drugExpanders.hidden{'data-target': 'company-expander.drugs'}
+                - region_companies = reg[:companies] || []
+                - filtered_companies = region_companies.select { |co| co[:name] }
+                - region_companies.sort_by {|co| co[:name]}.each do |co|
+                  - filtered_drugs = co[:drugs].select { |co| co[:special_situation]&.include?(current_user.organization.id.to_s) }
+                  - filtered_drugs.each do |drug|
+
+                    %div.drugExpander{'data-controller': 'drug-expander', 'data-drug-expander-start-state': sidemenu_open_close_state(initial_drug_id,drug[:id]) }
+                      %div.drug
+                        %button{'data-action': 'click->drug-expander#toggle'}
+                          = icon('fas', 'plus', 'data-target': 'drug-expander.icon')
+                          = drug[:brand_name]
+                      %div.periodTypeExpanders.hidden{'data-target': 'drug-expander.periodTypes'}
+                        - drug[:period_types].keys.sort.each do |ptype|
+                          - periods_of_type = drug[:period_types][ptype].select {|dp| dp[:status] != 'expired'}
+                          - next if periods_of_type.empty?
+
+                          %div.periodTypeExpander{'data-controller': 'period-type-expander', 'data-period-type-expander-start-state': sidemenu_open_close_state(initial_period_type, ptype) }
+                            %div.periodType
+                              %button{'data-action': 'click->period-type-expander#toggle'}
+                                = icon('fas', 'plus', 'data-target': 'period-type-expander.icon')
+                                = ptype
+
+                            %div.periods.hidden{'data-target': 'period-type-expander.periods'}
+                              - periods_of_type.sort_by {|dp| dp[:label]}.each do |dp|
+                                - if dp[:id]==initial_drug_period_id
+                                  = link_to(dp[:label], book_path(dp[:id]), class: 'selectedPeriod')
+                                - else
+                                  = link_to(dp[:label], book_path(dp[:id]))
