--- a/app/views/book/index.html.haml
+++ b/app/views/book/index.html.haml
@@ -271,7 +271,7 @@
                 %td.down
                 %td.down
                 %td.down
-                %td.down.tradeButton{'style': down.id == max_id ? 'background: yellow' : ''}
+                %td.down.tradeButton{'style': downo.id == max_id ? 'background: yellow' : ''}
                   = downo.amount
                   -# if (downo.organization==current_user.organization) && current_user.trader?
                     %div.onFocus
